@@ -1,5 +1,12 @@
 2013-06-16  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
 
+	* eww.el (eww): New group.
+	(eww-header-line-format): New custom variable.
+	(eww-current-title): New variable.
+	(eww-display-html): Update header and handle title tag.
+	(eww-update-header-line-format): New function.
+	(eww-tag-title): New function.
+
 	* shr.el (shr-dom-to-xml): (shr-dom-to-xml): New function.
 	(shr-tag-svg): Add support for the SVG tag.
 	(shr-bullet): New custom variable.
